[metadata]
name = shinylive
version = attr: shinylive.__version__
author = Winston Chang
author_email = winston@rstudio.com
url = https://github.com/rstudio/py-shinylive
description = Tools for static deployment of Shiny applications
license = GNU General Public License v3
license_file = LICENSE
platforms = any
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/rstudio/py-shinylive/issues
    Documentation = https://rstudio.github.io/pyshiny-site/
    Source Code = https://github.com/rstudio/py-shinylive



[options]
python_requires = >=3.7
packages = find:
test_suite = tests
include_package_data = True
setup_requires =
    setuptools
install_requires =
  shiny
tests_require =
  pytest>=3
zip_safe = False

[options.packages.find]
include = shinylive, shinylive.*

[options.package_data]
shinylive = py.typed


[flake8]
ignore = E203, E302, E402, E501, F403, F405, W503
exclude = docs
